--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     android:background="#63B8FF">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+  <RelativeLayout
+      android:id="@+id/adsRl"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      /> 
 </FrameLayout>
